[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/wave_designer/synth_designer/wave_nodes/rect_wave.gd" type="Script" id=1]
[ext_resource path="res://ui/wave_designer/synth_designer/wave_nodes/title_bar.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/widgets/spin_bar.gd" type="Script" id=3]

[node name="RectWave" type="PanelContainer"]
margin_right = 148.0
margin_bottom = 394.0
size_flags_horizontal = 9
size_flags_vertical = 9
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBC" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 153.0
margin_bottom = 387.0

[node name="Title" parent="VBC" groups=["Title"] instance=ExtResource( 2 )]
margin_right = 146.0
title = "RECTANGLE"

[node name="Params" type="GridContainer" parent="VBC"]
margin_top = 24.0
margin_right = 146.0
margin_bottom = 380.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 2
custom_constants/hseparation = 8
columns = 2

[node name="LabelMul" type="Label" parent="VBC/Params" groups=["Label"]]
margin_right = 52.0
margin_bottom = 14.0
text = "Freq"

[node name="Mul" type="ProgressBar" parent="VBC/Params"]
margin_left = 60.0
margin_right = 146.0
margin_bottom = 14.0
rect_min_size = Vector2( 48, 14 )
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 32.0
percent_visible = false
script = ExtResource( 3 )
_decimals = 2

[node name="LabelOfs" type="Label" parent="VBC/Params" groups=["Label"]]
margin_top = 16.0
margin_right = 52.0
margin_bottom = 30.0
text = "Offset"

[node name="Ofs" type="ProgressBar" parent="VBC/Params"]
margin_left = 60.0
margin_top = 16.0
margin_right = 146.0
margin_bottom = 30.0
rect_min_size = Vector2( 61, 14 )
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = -100.0
percent_visible = false
script = ExtResource( 3 )
_decimals = 2

[node name="LabelVol" type="Label" parent="VBC/Params" groups=["Label"]]
margin_top = 32.0
margin_right = 52.0
margin_bottom = 46.0
text = "Volume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vol" type="ProgressBar" parent="VBC/Params"]
margin_left = 60.0
margin_top = 32.0
margin_right = 146.0
margin_bottom = 46.0
rect_min_size = Vector2( 41, 14 )
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = -100.0
step = 1.0
percent_visible = false
script = ExtResource( 3 )
big_step = 5.0
huge_step = 10.0

[node name="LabelZStart" type="Label" parent="VBC/Params" groups=["Label"]]
margin_top = 48.0
margin_right = 52.0
margin_bottom = 62.0
text = "Z Start"

[node name="ZStart" type="ProgressBar" parent="VBC/Params"]
margin_left = 60.0
margin_top = 48.0
margin_right = 146.0
margin_bottom = 62.0
rect_min_size = Vector2( 36, 14 )
size_flags_horizontal = 3
size_flags_vertical = 4
step = 1.0
percent_visible = false
script = ExtResource( 3 )
big_step = 5.0
huge_step = 10.0

[node name="LabelNStart" type="Label" parent="VBC/Params" groups=["Label"]]
margin_top = 64.0
margin_right = 52.0
margin_bottom = 78.0
text = "- Start"

[node name="NStart" type="ProgressBar" parent="VBC/Params"]
margin_left = 60.0
margin_top = 64.0
margin_right = 146.0
margin_bottom = 78.0
rect_min_size = Vector2( 36, 14 )
size_flags_horizontal = 3
size_flags_vertical = 4
step = 1.0
percent_visible = false
script = ExtResource( 3 )
big_step = 5.0
huge_step = 10.0

[node name="ReferenceRect" type="ReferenceRect" parent="VBC/Params"]
margin_top = 80.0
margin_right = 52.0
margin_bottom = 104.0
rect_min_size = Vector2( 0, 24 )

[node name="ReferenceRect2" type="ReferenceRect" parent="VBC/Params"]
margin_left = 60.0
margin_top = 80.0
margin_right = 146.0
margin_bottom = 104.0
rect_min_size = Vector2( 0, 24 )

[node name="LabelCycles" type="Label" parent="VBC/Params" groups=["Label"]]
margin_top = 106.0
margin_right = 52.0
margin_bottom = 120.0
text = "Cycles"

[node name="Cycles" type="ProgressBar" parent="VBC/Params"]
margin_left = 60.0
margin_top = 106.0
margin_right = 146.0
margin_bottom = 120.0
rect_min_size = Vector2( 36, 14 )
size_flags_horizontal = 3
size_flags_vertical = 4
step = 1.0
value = 1.0
percent_visible = false
script = ExtResource( 3 )
big_step = 5.0
huge_step = 10.0

[node name="LabelPosition" type="Label" parent="VBC/Params" groups=["Label"]]
margin_top = 122.0
margin_right = 52.0
margin_bottom = 136.0
text = "Position"

[node name="Position" type="ProgressBar" parent="VBC/Params"]
margin_left = 60.0
margin_top = 122.0
margin_right = 146.0
margin_bottom = 136.0
rect_min_size = Vector2( 56, 14 )
size_flags_horizontal = 3
size_flags_vertical = 4
value = 1.0
percent_visible = false
script = ExtResource( 3 )
big_step = 5.0
huge_step = 10.0
_decimals = 2

[node name="LabelOutput" type="Label" parent="VBC/Params" groups=["Label"]]
margin_top = 141.0
margin_right = 52.0
margin_bottom = 155.0
text = "Output"

[node name="Output" type="OptionButton" parent="VBC/Params"]
margin_left = 60.0
margin_top = 138.0
margin_right = 146.0
margin_bottom = 158.0
text = "Off"
items = [ "Off", null, false, 0, null, "Replace", null, false, 1, null, "Add", null, false, 2, null, "AM", null, false, 3, null, "XM", null, false, 4, null ]
selected = 0

[node name="LabelFrom" type="Label" parent="VBC/Params" groups=["Label"]]
margin_top = 160.0
margin_right = 52.0
margin_bottom = 174.0
text = "From"

[node name="From" type="ProgressBar" parent="VBC/Params"]
margin_left = 60.0
margin_top = 160.0
margin_right = 146.0
margin_bottom = 174.0
rect_min_size = Vector2( 36, 14 )
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = -1.0
step = 1.0
percent_visible = false
script = ExtResource( 3 )
big_step = 1.0
huge_step = 1.0

[node name="LabelPM" type="Label" parent="VBC/Params" groups=["Label"]]
margin_top = 176.0
margin_right = 52.0
margin_bottom = 190.0
text = "PM"

[node name="PM" type="ProgressBar" parent="VBC/Params"]
margin_left = 60.0
margin_top = 176.0
margin_right = 146.0
margin_bottom = 190.0
rect_min_size = Vector2( 41, 14 )
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = -100.0
step = 1.0
percent_visible = false
script = ExtResource( 3 )
big_step = 5.0
huge_step = 10.0

[node name="LabelAM" type="Label" parent="VBC/Params" groups=["Label"]]
margin_top = 192.0
margin_right = 52.0
margin_bottom = 206.0
text = "AM"

[node name="AM" type="ProgressBar" parent="VBC/Params"]
margin_left = 60.0
margin_top = 192.0
margin_right = 146.0
margin_bottom = 206.0
rect_min_size = Vector2( 41, 14 )
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = -100.0
step = 1.0
percent_visible = false
script = ExtResource( 3 )
big_step = 5.0
huge_step = 10.0

[node name="LabelXM" type="Label" parent="VBC/Params" groups=["Label"]]
margin_top = 208.0
margin_right = 52.0
margin_bottom = 222.0
text = "XM"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="XM" type="ProgressBar" parent="VBC/Params"]
margin_left = 60.0
margin_top = 208.0
margin_right = 146.0
margin_bottom = 222.0
rect_min_size = Vector2( 41, 14 )
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = -100.0
step = 1.0
percent_visible = false
script = ExtResource( 3 )
big_step = 5.0
huge_step = 10.0

[connection signal="value_changed" from="VBC/Params/Mul" to="." method="_on_Mul_value_changed"]
[connection signal="value_changed" from="VBC/Params/Ofs" to="." method="_on_Ofs_value_changed"]
[connection signal="value_changed" from="VBC/Params/Vol" to="." method="_on_Vol_value_changed"]
[connection signal="value_changed" from="VBC/Params/ZStart" to="." method="_on_ZStart_value_changed"]
[connection signal="value_changed" from="VBC/Params/NStart" to="." method="_on_NStart_value_changed"]
[connection signal="value_changed" from="VBC/Params/Cycles" to="." method="_on_Cycles_value_changed"]
[connection signal="value_changed" from="VBC/Params/Position" to="." method="_on_Position_value_changed"]
[connection signal="item_selected" from="VBC/Params/Output" to="." method="_on_Output_item_selected"]
[connection signal="value_changed" from="VBC/Params/From" to="." method="_on_From_value_changed"]
[connection signal="value_changed" from="VBC/Params/PM" to="." method="_on_PM_value_changed"]
[connection signal="value_changed" from="VBC/Params/AM" to="." method="_on_AM_value_changed"]
[connection signal="value_changed" from="VBC/Params/XM" to="." method="_on_XM_value_changed"]
